--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,4 @@
+# Define how Node packages should be installed, disable yarn Plug N play installation strategy
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.9.2.cjs
