--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,13 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: './nvmrc'
+                  node-version: '.nvmrc'
 
             - name: Install dependencies
               run: yarn install --frozen-lockfile
+
+            - name: Prettier
+              run: yarn prettier
 
             - name: Lint
               run: yarn run lint
