--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
               run: yarn install --frozen-lockfile
 
             - name: Prettier
-              run: yarn prettier
+              run: yarn run prettier
 
             - name: Lint
               run: yarn run lint
