DJ_A2_01 : Updated Autocomplete.component.tsx

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -20,7 +20,9 @@
             "@pages": ["pages/index"],
             "@pages/*": ["pages/*"],
             "@containers": ["containers/index"],
-            "@containers/*": ["containers/*"]
+            "@containers/*": ["containers/*"],
+            "@utilities": ["utilities/index"],
+            "@utilities/*": ["utilities/*"]
         }
     }
 }
