DJ_A2_05 : Deleted commom.ts

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -24,9 +24,7 @@
             "@utilities": ["utilities/index"],
             "@utilities/*": ["utilities/*"],
             "@routes": ["routes/index"],
-            "@routes/*": ["routes/*"],
-            "@types": ["types/index"],
-            "@types/*": ["types/*"]
+            "@routes/*": ["routes/*"]
         }
     }
 }
